[gd_scene load_steps=5 format=3 uid="uid://ddl5roo03rvdl"]

[ext_resource type="Script" uid="uid://c2vnr035tqxi6" path="res://game/scenes/ui/menu.gd" id="1_qbs5s"]
[ext_resource type="Script" uid="uid://cmo5qw3rubish" path="res://addons/my-ecosystem-template/buttons/anim_button.gd" id="2_5ar2c"]
[ext_resource type="PackedScene" uid="uid://unleulyal7nv" path="res://game/scenes/levels/title_level.tscn" id="2_h2f6c"]
[ext_resource type="Texture2D" uid="uid://cwysrba2abty5" path="res://game/assets/art/title-bg.svg" id="3_qitgv"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qbs5s")
metadata/_edit_use_anchors_ = true

[node name="BaseLevel" parent="." instance=ExtResource("2_h2f6c")]
position = Vector2(182, -555)

[node name="LevelArea" parent="BaseLevel" index="0"]
modulate = Color(0.7921569, 0.94117653, 0.4862745, 1)

[node name="Car" parent="BaseLevel" index="4"]
modulate = Color(1, 0.61960787, 0.627451, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
metadata/_edit_use_anchors_ = true

[node name="TitleBg" type="Sprite2D" parent="UI/MarginContainer"]
modulate = Color(1, 1, 1, 0.05882353)
position = Vector2(210.00002, 80.88996)
scale = Vector2(3.59375, 2.7629013)
texture = ExtResource("3_qitgv")
flip_h = true

[node name="Title" type="RichTextLabel" parent="UI/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
text = "[font_size=50px][outline_size=10][wave][color=darkgray]Tri[/color][color=orange]color[/color][color=lightblue] Trials"
fit_content = true
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="SpacerControl" type="Control" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.95

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 2

[node name="SpacerControl2" type="Control" parent="UI/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="UI/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"
script = ExtResource("2_5ar2c")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="CreditsButton" type="Button" parent="UI/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"
script = ExtResource("2_5ar2c")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="QuitButton" type="Button" parent="UI/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
script = ExtResource("2_5ar2c")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="SpacerControl3" type="Control" parent="UI/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[editable path="BaseLevel"]
[editable path="BaseLevel/Car"]
